@@ -2,7 +2,7 @@
 # Ticket/Number/Date.pm - a date ticket number generator
 # Copyright (C) 2002-2003 Martin Edenhofer <martin+code@otrs.org>
 # --
-# $Id: Date.pm,v 1.7 2003-03-18 15:35:30 wiktor Exp $
+# $Id: Date.pm,v 1.7.2.1 2003-06-01 18:05:47 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -19,51 +19,43 @@ package Kernel::System::Ticket::Number::Date;
 use strict;
 
 use vars qw($VERSION);
-$VERSION = '$Revision: 1.7 $';
+$VERSION = '$Revision: 1.7.2.1 $';
 $VERSION =~ s/^\$.*:\W(.*)\W.+?$/$1/;
 
 sub CreateTicketNr {
     my $Self = shift;
     my $JumpCounter = shift || 0;
-
-    # --
     # get needed config options 
-    # --
-    $Self->{CounterLog} = $Self->{ConfigObject}->Get('CounterLog');
-    $Self->{SystemID} = $Self->{ConfigObject}->Get('SystemID');
-
+    my $CounterLog = $Self->{ConfigObject}->Get('CounterLog');
+    my $SystemID = $Self->{ConfigObject}->Get('SystemID');
+    # get current time
     my ($Sec, $Min, $Hour, $Day, $Month, $Year) = localtime(time);
     $Year = $Year+1900;
     $Month = $Month+1;
     $Month  = "0$Month" if ($Month <10);
     $Day = "0$Day" if ($Day <10);
-
-    # --
     # read count
-    # --
-    open (COUNTER, "< $Self->{CounterLog}") || die "Can't open $Self->{CounterLog}";
-    my $Line = <COUNTER>;
-    my ($Count) = split(/;/, $Line);
-    close (COUNTER);
-    if ($Self->{Debug} > 0) {
-        $Self->{LogObject}->Log(
-          Priority => 'debug',
-          Message => "Read counter: $Count",
-        );
+    my $Count = 0; 
+    if (-f $CounterLog) {
+        open (COUNTER, "< $CounterLog") || die "Can't open $CounterLog: $!";
+        my $Line = <COUNTER>; 
+        ($Count) = split(/;/, $Line);
+        close (COUNTER);
+        # just debug
+        if ($Self->{Debug} > 0) {
+            $Self->{LogObject}->Log(
+              Priority => 'debug',
+              Message => "Read counter from $CounterLog: $Count",
+            );
+        }
     }
-
-    # --
     # count auto increment ($Count++)
-    # --
     $Count++;
-    $Count = $Count + $JumpCounter;
-
-    # --
+    $Count = $Count+$JumpCounter;
     # write new count
-    # --
-    if (open (COUNTER, "> $Self->{CounterLog}")) {
-        flock (COUNTER, 2) || warn "Can't set file lock ($Self->{CounterLog}): $!";
-        print COUNTER $Count . "\n";
+    if (open (COUNTER, "> $CounterLog")) {
+        flock (COUNTER, 2) || warn "Can't set file lock ($CounterLog): $!";
+        print COUNTER $Count."\n";
         close (COUNTER);
         if ($Self->{Debug} > 0) {
             $Self->{LogObject}->Log(
@@ -75,18 +67,13 @@ sub CreateTicketNr {
     else {
         $Self->{LogObject}->Log(
             Priority => 'error',
-            Message => "Can't write $Self->{CounterLog}: $!",
+            Message => "Can't write $CounterLog: $!",
         );
-        die "Can't write $Self->{CounterLog}: $!";
+        die "Can't write $CounterLog: $!";
     }
-    # --
-    # new ticket number
-    # --
-    my $Tn = $Year.$Month.$Day.$Self->{SystemID} . $Count;
-
-    # --
+    # create new ticket number
+    my $Tn = $Year.$Month.$Day.$SystemID.$Count;
     # Check ticket number. If exists generate new one! 
-    # --
     if ($Self->CheckTicketNr(Tn=>$Tn)) {
         $Self->{LoopProtectionCounter}++;
         if ($Self->{LoopProtectionCounter} >= 1000) {
@@ -98,9 +85,7 @@ sub CreateTicketNr {
           );
           return;
         }
-        # --
         # create new ticket number again
-        # --
         $Self->{LogObject}->Log(
           Priority => 'notice',
           Message => "Tn ($Tn) exists! Creating new one.",
@@ -113,15 +98,9 @@ sub CreateTicketNr {
 sub GetTNByString {
     my $Self = shift;
     my $String = shift || return;
-
-    # --
     # get needed config options 
-    # --
     my $TicketHook = $Self->{ConfigObject}->Get('TicketHook');
-
-    # --
     # check ticket number
-    # --
     if ($String =~ /$TicketHook:+.{0,1}(\d{8,40})\-FW/i) {
         return $1;
     }
